# domain-account

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy_main.yml
domain_account/: main.py
domain_account/adapters/: __factory__.py
domain_account/adapters/controllers/: __binding__.py  __dependencies__.py  __init__.py  account_controller.py  dtos.py  interfaces.py
domain_account/adapters/repositories/: account_repository.py  interfaces.py
domain_account/business/: __factory__.py  interfaces.py  ports.py  services.py
domain_account/business/account/use_case/: exceptions.py  interfaces.py  login_use_case.py  register_use_case.py
domain_account/business/use_case/: __init__.py  interfaces.py  retrieve_user_use_case.py  update_address_use_case.py  update_cpf_use_case.py
domain_account/frameworks/: __factory__.py
domain_account/frameworks/firebase/: __init__.py  manager.py
domain_account/frameworks/mongodb/: __init__.py  manager.py
domain_account/models/: __init__.py  address.py  user.py
infra/: cloudbuild.yaml
infra/app_engine/: dev.yaml  main.yaml
