[tool.poetry]
name = "domain-account"
version = "0.1.0"
description = ""
authors = ["MrAbade <vini.abade@outlook.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
motor = "^3.4.0"
environs = "^11.0.0"
uvicorn = "^0.29.0"
gunicorn = "^21.2.0"
pydantic = { extras = ["email", "phonenumbers"], version = "^2.6.4" }
pydantic-extra-types = "^2.6.0"
phonenumbers = "^8.13.33"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
pytest = "^8.1.1"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
